fix: align of suffix

--- a/components/date-picker/style/index.less
+++ b/components/date-picker/style/index.less
@@ -64,25 +64,11 @@
       @vertical-fix-sm;
   }
 
-  // &:not(&-range) &-input > input {
-  //   .input;
-  //   padding-right: @font-size-base + @input-padding-horizontal-base;
-  // }
-
-  // &-large:not(&-range) &-input > input {
-  //   .input-lg;
-  //   padding-right: @font-size-lg + @input-padding-horizontal-lg;
-  // }
-
-  // &-small:not(&-range) &-input > input {
-  //   .input-sm;
-  //   padding-right: @font-size-sm + @input-padding-horizontal-sm;
-  // }
-
   &-suffix {
     color: @disabled-color;
     pointer-events: none;
     margin-left: @padding-xs / 2;
+    align-self: center;
   }
 
   &-clear {
